--- a/webpart.html
+++ b/webpart.html
@@ -1,3 +1,3 @@
 <script type="text/javascript" src="../SiteAssets/InsaneEpsilon/script.js"></script>
-<link rel="stylesheet" type="text/css" href="../SiteAssets/InsaneEpsilon/style.css"></link>
+<link rel="stylesheet" type="text/css" href="../SiteAssets/InsaneEpsilon/style.css?rev=1"></link>
 <div class="insane-eplison-webpart-tabbar"></div>
